--- a/astro/index.html
+++ b/astro/index.html
@@ -6,142 +6,154 @@
     <title>KI-Ferien.de | Dein Astro-Planer</title>
     <style>
         :root {
-            --glow-color: #0096ff;
-            --mystic-purple: rgba(120, 0, 255, 0.2);
-            --text-gold: #ffcc00;
-            --bg-deep: #02050a;
+            --glow: #0096ff;
+            --gold: #ffcc00;
+            --bg: #02050a;
         }
 
-        * { box-sizing: border-box; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
-            margin: 0; padding: 0;
-            background-color: var(--bg-deep);
+            background-color: var(--bg);
             color: white;
-            font-family: 'Segoe UI', Tahoma, sans-serif;
-            min-height: 100vh;
-            display: flex; justify-content: center; align-items: center;
-            overflow-x: hidden; position: relative;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
         }
 
-        .nebula {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle at 20% 30%, var(--mystic-purple), transparent 50%),
-                        radial-gradient(circle at 80% 70%, rgba(0, 150, 255, 0.15), transparent 50%);
-            filter: blur(60px); z-index: -2;
-            animation: nebulaPulse 15s infinite alternate ease-in-out;
+        /* HINTERGRUND GANZ HINTEN */
+        .stars-bg {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at center, #0a1e3b 0%, #02040a 100%);
+            z-index: 1;
         }
 
-        .stars-container {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            z-index: -1;
-            background-image: 
-                radial-gradient(1px 1px at 10% 20%, #fff, transparent),
-                radial-gradient(1.5px 1.5px at 30% 40%, #fff, transparent),
-                radial-gradient(2px 2px at 70% 80%, #fff, transparent),
-                radial-gradient(1px 1px at 90% 30%, #fff, transparent);
-            background-size: 350px 350px;
-        }
-
+        /* CONTAINER GANZ VORNE */
         .main-container {
-            position: relative; z-index: 10;
-            display: flex; flex-direction: row; align-items: center; justify-content: center;
-            gap: 40px; width: 100%; max-width: 1250px; padding: 20px;
+            position: relative;
+            z-index: 9999; /* Zwingt alles in den Vordergrund */
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 30px;
+            width: 100%;
+            max-width: 1200px;
+            padding: 20px;
         }
 
-        .zodiac-column { display: flex; flex-direction: column; gap: 12px; width: 180px; }
+        .zodiac-column {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
 
         .zodiac-card {
-            background: rgba(255, 255, 255, 0.04);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 12px; text-align: center; border-radius: 12px;
-            cursor: pointer; transition: 0.3s; backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            text-align: center;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: 0.3s;
+            min-width: 160px;
+            pointer-events: auto; /* Wichtig! */
         }
 
         .zodiac-card:hover, .zodiac-card.active {
-            border-color: var(--glow-color); background: rgba(0, 150, 255, 0.15);
-            box-shadow: 0 0 25px var(--glow-color); transform: scale(1.08);
+            border-color: var(--glow);
+            background: rgba(0, 150, 255, 0.2);
+            box-shadow: 0 0 20px var(--glow);
         }
 
-        .zodiac-symbol { font-size: 2.2rem; color: var(--text-gold); display: block; }
-        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; font-size: 0.95rem; }
-        .zodiac-date { font-size: 0.75rem; opacity: 0.7; pointer-events: none; }
+        .zodiac-symbol { font-size: 2rem; color: var(--gold); display: block; pointer-events: none; }
+        .zodiac-name { font-weight: bold; display: block; margin-top: 5px; pointer-events: none; }
+        .zodiac-date { font-size: 0.7rem; opacity: 0.7; pointer-events: none; }
 
+        /* GLASKUGEL */
         .crystal-ball-container {
-            width: 400px; height: 400px; flex-shrink: 0;
-            display: flex; justify-content: center; align-items: center; position: relative;
+            width: 350px;
+            height: 350px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .crystal-ball {
-            width: 100%; height: 100%; border-radius: 50%;
-            background: radial-gradient(circle at 35% 35%, rgba(255,255,255,0.3) 0%, rgba(0,150,255,0.1) 40%, rgba(0,5,20,0.85) 90%);
-            box-shadow: 0 0 70px var(--glow-color), inset 0 0 50px rgba(255,255,255,0.1);
-            border: 2px solid rgba(255, 255, 255, 0.2);
-            display: flex; flex-direction: column; justify-content: center; align-items: center;
-            text-align: center; padding: 45px; animation: sphereFloat 6s infinite ease-in-out;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.2), rgba(0,0,0,0.8));
+            box-shadow: 0 0 50px var(--glow), inset 0 0 30px rgba(255,255,255,0.1);
+            border: 2px solid rgba(255,255,255,0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 30px;
         }
-        @keyframes sphereFloat { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-
-        .ball-content h1 { font-size: 2rem; margin: 0; text-shadow: 0 0 15px var(--glow-color); }
-        .ball-content p { font-size: 1.05rem; margin: 20px 0; min-height: 3.5em; line-height: 1.4; }
 
         .btn-astro {
             background: linear-gradient(45deg, #0078ff, #00c3ff);
-            border: none; padding: 14px 28px; color: white; border-radius: 35px;
-            cursor: pointer; font-weight: bold; text-transform: uppercase;
-            box-shadow: 0 5px 20px rgba(0, 120, 255, 0.5); transition: 0.3s;
+            border: none;
+            padding: 12px 24px;
+            color: white;
+            border-radius: 30px;
+            cursor: pointer;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-top: 15px;
+            pointer-events: auto;
+            z-index: 10000;
         }
-        .btn-astro:hover { transform: translateY(-3px); filter: brightness(1.2); }
 
-        @media (max-width: 950px) {
-            .main-container { flex-direction: column; padding-top: 60px; }
-            .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; width: 100%; }
-            .crystal-ball-container { width: 320px; height: 320px; order: -1; }
+        .btn-astro:hover { transform: scale(1.05); box-shadow: 0 0 20px var(--glow); }
+
+        @media (max-width: 850px) {
+            .main-container { flex-direction: column; overflow-y: auto; height: auto; padding: 40px 10px; }
+            .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; }
         }
     </style>
 </head>
 <body>
 
-    <div class="nebula"></div>
-    <div class="stars-container"></div>
+    <div class="stars-bg"></div>
 
     <main class="main-container">
         <div class="zodiac-column">
-            <div class="zodiac-card" onclick="updateBall('widder', this)">
+            <div class="zodiac-card" onclick="selectZodiac('widder', this)">
                 <span class="zodiac-symbol">♈</span><span class="zodiac-name">Widder</span><span class="zodiac-date">21.03.-20.04.</span>
             </div>
-            <div class="zodiac-card" onclick="updateBall('stier', this)">
+            <div class="zodiac-card" onclick="selectZodiac('stier', this)">
                 <span class="zodiac-symbol">♉</span><span class="zodiac-name">Stier</span><span class="zodiac-date">21.04.-20.05.</span>
             </div>
-            <div class="zodiac-card" onclick="updateBall('zwillinge', this)">
+            <div class="zodiac-card" onclick="selectZodiac('zwillinge', this)">
                 <span class="zodiac-symbol">♊</span><span class="zodiac-name">Zwillinge</span><span class="zodiac-date">21.05.-21.06.</span>
             </div>
-            <div class="zodiac-card" onclick="updateBall('krebs', this)">
+            <div class="zodiac-card" onclick="selectZodiac('krebs', this)">
                 <span class="zodiac-symbol">♋</span><span class="zodiac-name">Krebs</span><span class="zodiac-date">22.06.-22.07.</span>
             </div>
-            <div class="zodiac-card" onclick="updateBall('loewe', this)">
+            <div class="zodiac-card" onclick="selectZodiac('loewe', this)">
                 <span class="zodiac-symbol">♌</span><span class="zodiac-name">Löwe</span><span class="zodiac-date">23.07.-23.08.</span>
             </div>
-            <div class="zodiac-card" onclick="updateBall('jungfrau', this)">
+            <div class="zodiac-card" onclick="selectZodiac('jungfrau', this)">
                 <span class="zodiac-symbol">♍</span><span class="zodiac-name">Jungfrau</span><span class="zodiac-date">24.08.-23.09.</span>
             </div>
         </div>
 
         <div class="crystal-ball-container">
             <div class="crystal-ball">
-                <div class="ball-content">
-                    <h1 id="ball-title">KI-FERIEN</h1>
-                    <p id="ball-text">Wähle dein Sternzeichen für deine kosmischen Ferien.</p>
-                    <button class="btn-astro" id="astro-btn" onclick="startTravel()">Sternenreise planen</button>
-                </div>
+                <h2 id="ball-title" style="margin:0; font-size:1.5rem;">KI-FERIEN</h2>
+                <p id="ball-text" style="margin:15px 0; font-size:0.9rem;">Wähle dein Sternzeichen.</p>
+                <button class="btn-astro" onclick="goToTravel()">Reise planen</button>
             </div>
         </div>
 
         <div class="zodiac-column">
-            <div class="zodiac-card" onclick="updateBall('waage', this)">
-                <span class="zodiac-symbol">♎</span><span class="zodiac-name">Waage</span><span class="zodiac-date">24.09.-23.10.</span>
-            </div>
-            <div class="zodiac-card" onclick="updateBall('skorpion', this)">
-                <span class="zodiac-symbol">♏</span><span class="zodiac-name">Skorpion</span><span class="zodiac-date">24.10.-22.11.</span>
-            </div>
-            <div class="zodiac-card" onclick="updateBall('schuet
+            <div class="zodiac-card" onclick="selectZodiac('waage', this)">
+                <span class="zodiac-symbol">♎</span><span class="zodiac-name">Waage</span><span class="zodiac-date">24.09.-23.10
