--- a/astro/reise.html
+++ b/astro/reise.html
@@ -6,175 +6,182 @@
     <title>Deine Kosmische Reise | KI-Ferien.de</title>
     <style>
         :root {
-            --glow-color: #0096ff;
-            --text-gold: #ffcc00;
-            --bg-deep: #02050a;
-            --glass-bg: rgba(255, 255, 255, 0.05);
+            --glow: #0096ff;
+            --gold: #ffcc00;
+            --bg: #02050a;
         }
 
-        * { box-sizing: border-box; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
-            margin: 0;
-            padding: 0;
-            background-color: var(--bg-deep);
+            background-color: var(--bg);
             color: white;
-            font-family: 'Segoe UI', Tahoma, sans-serif;
+            font-family: 'Segoe UI', Arial, sans-serif;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
-            overflow-x: hidden;
             background: radial-gradient(circle at center, #0a1e3b 0%, #02040a 100%);
+            padding-bottom: 50px;
         }
 
-        /* Hintergrund-Effekte (identisch zur Hauptseite) */
-        .stars {
+        /* HINTERGRUND STERNE */
+        .stars-bg {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: -1;
             background-image: 
                 radial-gradient(1px 1px at 20px 30px, #fff, transparent),
-                radial-gradient(1.5px 1.5px at 100px 250px, #fff, transparent),
-                radial-gradient(2px 2px at 300px 150px, #fff, transparent);
+                radial-gradient(1.5px 1.5px at 100px 250px, #fff, transparent);
             background-size: 300px 300px;
             opacity: 0.3;
         }
 
-        .container {
-            width: 100%;
-            max-width: 1000px;
-            padding: 40px 20px;
+        .content-wrap {
+            width: 90%;
+            max-width: 900px;
+            margin-top: 50px;
             z-index: 10;
         }
 
-        /* Header Sektion */
-        .header-box {
-            background: var(--glass-bg);
+        .header-card {
+            background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 20px;
             padding: 40px;
             text-align: center;
             backdrop-filter: blur(15px);
-            margin-bottom: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            margin-bottom: 30px;
         }
 
-        h1 {
-            color: var(--text-gold);
-            font-size: 2.5rem;
-            margin: 0 0 10px 0;
-            text-shadow: 0 0 20px rgba(255, 204, 0, 0.4);
-        }
+        h1 { color: var(--gold); text-shadow: 0 0 15px rgba(255, 204, 0, 0.5); margin-bottom: 10px; }
+        .dest-title { font-size: 1.5rem; color: var(--glow); font-weight: bold; margin-bottom: 15px; display: block; }
+        .dest-desc { line-height: 1.6; font-size: 1.1rem; opacity: 0.9; }
 
-        .destination-name {
-            font-size: 1.4rem;
-            color: var(--glow-color);
-            font-weight: bold;
-            display: block;
-            margin-bottom: 15px;
-            letter-spacing: 1px;
-        }
-
-        .description {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 0 auto;
-            opacity: 0.9;
-        }
-
-        /* Widget Bereich */
-        .booking-card {
-            background: rgba(255, 255, 255, 0.95); /* Hellerer Kontrast für Widgets */
+        /* WIDGET BOX */
+        .widget-container {
+            background: white; /* Weiß für bessere Widget-Sichtbarkeit */
             border-radius: 20px;
-            padding: 25px;
+            padding: 20px;
             color: #333;
-            box-shadow: 0 0 40px var(--glow-color);
-            margin-bottom: 40px;
+            box-shadow: 0 0 30px var(--glow);
+            margin-bottom: 30px;
         }
 
-        .booking-card h3 {
-            margin-top: 0;
-            color: #0056b3;
+        .widget-header {
             text-align: center;
-            font-size: 1.2rem;
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
+            font-weight: bold;
+            color: #0056b3;
+            margin-bottom: 15px;
+            font-size: 1rem;
         }
 
-        /* Info Karten */
-        .astro-tips {
+        .info-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: 1fr 1fr;
             gap: 20px;
-            margin-bottom: 40px;
         }
 
-        .tip-card {
-            background: var(--glass-bg);
+        .info-card {
+            background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 20px;
             border-radius: 15px;
-            backdrop-filter: blur(10px);
         }
 
-        .tip-card h4 {
-            color: var(--text-gold);
-            margin: 0 0 10px 0;
-        }
+        .info-card h4 { color: var(--gold); margin-bottom: 8px; }
 
-        .nav-footer {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .btn-back {
+        .back-btn {
+            margin-top: 40px;
+            display: inline-block;
             color: white;
             text-decoration: none;
-            font-size: 1rem;
-            opacity: 0.6;
-            transition: 0.3s;
             border: 1px solid rgba(255, 255, 255, 0.3);
             padding: 10px 20px;
             border-radius: 20px;
+            transition: 0.3s;
         }
-
-        .btn-back:hover {
-            opacity: 1;
-            background: rgba(255, 255, 255, 0.1);
-            color: var(--text-gold);
-            border-color: var(--text-gold);
-        }
+        .back-btn:hover { background: rgba(255, 255, 255, 0.1); color: var(--gold); }
 
         @media (max-width: 600px) {
-            h1 { font-size: 1.8rem; }
-            .header-box { padding: 25px; }
+            .info-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body>
 
-    <div class="stars"></div>
+    <div class="stars-bg"></div>
 
-    <div class="container">
-        <section class="header-box">
-            <h1 id="zodiac-header">Deine Sterne</h1>
-            <span class="destination-name" id="dest-name">Suche Ferienziel...</span>
-            <p class="description" id="dest-desc">
-                Warte einen Moment, während wir die Planetenkonstellationen für deine Ferien auswerten.
-            </p>
-        </section>
+    <div class="content-wrap">
+        <div class="header-card">
+            <h1 id="z-name">Deine Sterne</h1>
+            <span class="dest-title" id="d-title">Suche Ferienziel...</span>
+            <p class="dest-desc" id="d-desc">Analysiere die Planeten...</p>
+        </div>
 
-        <section class="booking-card">
-            <h3>Flüge & Unterkünfte vergleichen</h3>
-            <div id="tp-widget-container">
+        <div class="widget-container">
+            <div class="widget-header">Passende Flüge & Hotels für dich</div>
+            <div id="tp-widget">
                 </div>
-        </section>
+        </div>
 
-        <section class="astro-tips">
-            <div class="tip-card">
+        <div class="info-grid">
+            <div class="info-card">
                 <h4>Beste Reisezeit</h4>
-                <p id="tip-time">Wird berechnet...</p>
+                <p id="i-time">Wird berechnet...</p>
             </div>
-            <div class
+            <div class="info-card">
+                <h4>Kosmischer Vibe</h4>
+                <p id="i-vibe">Wird analysiert...</p>
+            </div>
+        </div>
+
+        <div style="text-align: center;">
+            <a href="index.html" class="back-btn">← Zurück zur Auswahl</a>
+        </div>
+    </div>
+
+    <script>
+        // Datenbank der Ziele
+        const astroDestinations = {
+            widder: { n: "Widder", t: "Island: Abenteuer im Feuerland", d: "Action pur! Entdecke brodelnde Geysire und einsame Vulkane. Perfekt für deinen feurigen Tatendrang.", time: "März bis Juni", vibe: "Dynamik & Freiheit" },
+            stier: { n: "Stier", t: "Toskana: Genuss für die Sinne", d: "Finde Erdung in den Weinbergen. Kulinarik und Erholung unter der Sonne Italiens.", time: "Mai bis September", vibe: "Sinnlichkeit & Ruhe" },
+            zwillinge: { n: "Zwillinge", t: "Tokio: Stadt der 1000 Lichter", d: "Deine Neugier braucht Reize. Erlebe die perfekte Mischung aus Tradition und Hightech.", time: "Oktober & April", vibe: "Inspiration & Tempo" },
+            krebs: { n: "Krebs", t: "Cornwall: Romantik am Meer", d: "Die Gezeiten spiegeln deine Seele. Entspanne in kuscheligen Cottages an der Steilküste.", time: "Juni bis August", vibe: "Geborgenheit & Wasser" },
+            loewe: { n: "Löwe", t: "Südfrankreich: Glanz & Gloria", p: "Zeig dich! Luxus-Ferien an der Côte d'Azur sind genau das Richtige für deinen Auftritt.", time: "Juli & August", vibe: "Pracht & Lebenslust" },
+            jungfrau: { n: "Jungfrau", t: "Schweizer Alpen: Purismus", d: "Klarheit und Fokus. Wandere durch unberührte Natur und finde deine innere Ordnung.", time: "September & Oktober", vibe: "Reinigung & Harmonie" },
+            waage: { n: "Waage", t: "Santorini: Ästhetik in Blau", d: "Harmonie pur. Die Architektur und das Licht der Kykladen schmeicheln deinem Schönheitssinn.", time: "Mai & Juni", vibe: "Balance & Eleganz" },
+            skorpion: { n: "Skorpion", t: "Marrakesch: Mystik der Wüste", d: "Geheimnisvoll und intensiv. Verliere dich in den Gassen der Medina und finde Magie.", time: "November bis März", vibe: "Transformation & Tiefe" },
+            schuetze: { n: "Schütze", t: "Patagonien: Das Ende der Welt", d: "Grenzenlose Freiheit. Deine Reiselust führt dich in die wildesten Weiten Südamerikas.", time: "Dezember bis Februar", vibe: "Optimismus & Weitblick" },
+            steinbock: { n: "Steinbock", t: "Südtirol: Gipfel der Stille", d: "Beständigkeit zahlt sich aus. Erreiche die höchsten Gipfel und genieße den Erfolg.", time: "Januar bis März", vibe: "Struktur & Erfolg" },
+            wassermann: { n: "Wassermann", t: "Lappland: Die Zukunft im Eis", d: "Unkonventionell reisen. Schlafe im Glas-Iglu und beobachte die Aurora Borealis.", time: "November bis Februar", vibe: "Vision & Freiheit" },
+            fische: { n: "Fische", t: "Bali: Traumreise zur Seele", d: "Lass die Realität hinter dir. Spirituelle Orte und das Rauschen des Ozeans heilen dich.", time: "Mai bis September", vibe: "Träumerei & Heilung" }
+        };
+
+        // URL-Parameter auslesen
+        const urlParams = new URLSearchParams(window.location.search);
+        const selected = urlParams.get('sign');
+
+        if (selected && astroDestinations[selected]) {
+            const data = astroDestinations[selected];
+            
+            // Seite füllen
+            document.getElementById('z-name').innerText = "Sternenreise für " + data.n;
+            document.getElementById('d-title').innerText = data.t;
+            document.getElementById('d-desc').innerText = data.d;
+            document.getElementById('i-time').innerText = data.time;
+            document.getElementById('i-vibe').innerText = data.vibe;
+            
+            // Travelpayouts Widget (Marker: 698672)
+            const widgetDiv = document.getElementById('tp-widget');
+            const script = document.createElement('script');
+            script.src = "https://tp.media/content?currency=eur&promo_id=4113&shmarker=698672&campaign_id=121&trs=12345&target_host=ki-ferien.de&locale=de&limit=6&powered_by=false";
+            script.async = true;
+            widgetDiv.appendChild(script);
+
+        } else {
+            // Notfall: Zurück zur Auswahl
+            window.location.href = "index.html";
+        }
+    </script>
+</body>
+</html>
